# VPU_Inspector

./: .gitignore  CMakeLists.txt  README.md  inspector.cpp  simulator.cpp
include/: inspector_rpc.h
protos/: sim_control.proto
simulator/: simulator_mock.cpp  simulator_rpc.cpp
simulator_include/: simulator_interface.h  simulator_rpc.h
src/: inspector.cpp  inspector_rpc.cpp
